Attempting to fix mobile stretching.

--- a/CSSFrameworks/progressive-image.js-master/css/progressive-image.css
+++ b/CSSFrameworks/progressive-image.js-master/css/progressive-image.css
@@ -11,6 +11,7 @@
   width: 100%;
   max-width: none;
   height: auto;
+  max-height: 100%;
   border: 0 none;
 }
 
